# CPP

Chunks/: Main.cpp
Project/: data.txt  main.cpp
Zaj1/: main.cpp
wejsc4/: main.cpp
zaj2/: main.cpp
zaj3/: CMakeLists.txt  main.cpp
zaj4/: main.cpp
zaj5/: main.cpp
zaj6/: main.cpp
zaj7/: main.cpp
zaj8/: main.cpp
